--- a/style.css
+++ b/style.css
@@ -872,7 +872,7 @@ margin: 0 0 10px 0;}
 .txt-basic ul{margin-top:0;}
 .txt-basic ul li{font-size:1em;}
 
-/*-----botones bootstrap -----*/
+/*-----bootstrap -----*/
 .btn-primary {color: white;
 text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 background-color: #006DCC;
@@ -934,4 +934,9 @@ background-color: #04C;
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
+}
+
+.row {
+	/*height:400px;*/
+
 }
