--- a/less/magic-bootstrap.less
+++ b/less/magic-bootstrap.less
@@ -6,6 +6,26 @@
 .globalreccolor {
   color:@mainBrandColor;
 }
+.label a {
+	color:@white;
+}
+
+#main-menu li {
+	background-color:@mainBrandColor;
+	margin-right: 5px;
+}
+
+#main-menu li a{
+	color:white;
+	text-shadow: 0 0px 0 white;
+}
+#main-menu li.current-menu-item{
+	background-color:@white;
+	border:1px solid @mainBrandColor;
+}
+#main-menu li.current-menu-item a{
+	color:@mainBrandColor;
+}
 
 
 // Colors
