--- a/less/magic-bootstrap.less
+++ b/less/magic-bootstrap.less
@@ -10,21 +10,96 @@
 	color:@white;
 }
 
-#main-menu li {
+#main-menu ul li {
 	background-color:@mainBrandColor;
 	margin-right: 5px;
+	border:1px solid @mainBrandColor;
+	
+}
+#main-menu li:hover {
+	background-color:darken(@mainBrandColor, 5%);
 }
 
 #main-menu li a{
 	color:white;
 	text-shadow: 0 0px 0 white;
+	padding: 5px;
 }
 #main-menu li.current-menu-item{
 	background-color:@white;
-	border:1px solid @mainBrandColor;
+	
 }
 #main-menu li.current-menu-item a{
 	color:@mainBrandColor;
+}
+
+
+.category-in-the-news {
+	background-color:@grayLighter;
+}
+
+/*------------new menu------------*/
+#pre-menu {
+	/*position: relative;
+	bottom: 0px;*/
+}
+#pre-menu li {
+	
+}
+/* header menu desplegable */
+#pre-menu li a {
+        display: block!important;
+        display: block;
+        position: relative;
+        text-decoration: none;
+        z-index: 999;
+	/*color: #fff;*/
+}
+#pre-menu li:hover,
+#pre-menu li a:hover,
+#pre-menu li:hover a {
+	text-decoration: none;
+	position: relative;
+	z-index: 999;
+}
+#pre-menu li ul {
+	display: none;
+	position: absolute;
+	z-index: 999;
+	width: 100px;
+	font-weight: bold;
+	left: 0;
+	padding: 2px 0 5px;
+	margin: 0 !important;
+}
+#pre-menu li a:hover ul,
+#pre-menu li:hover ul {
+	display: block !important;
+}
+#pre-menu li a:hover ul li,
+#pre-menu li:hover ul li {
+	position: relative;
+	display: block;
+	margin: 0 !important;
+	padding: 0 !important;
+	z-index: 999;
+	background-color: #b3b3b3;
+}
+#pre-menu li a:hover ul li a,
+#pre-menu li:hover ul li a {
+	padding: 2px 0 8px 0 !important;
+}
+#pre-menu li ul li:hover{
+	background-color: @grayLighter;
+}
+#pre-menu li ul li{
+	border:0;
+}
+#pre-menu li ul li a{
+	padding:0 0 0 3px;
+}
+.navbar .navbar-inner{
+	background-image:none;
 }
 
 
