layout sidebar in blog + fix submenu items in main menu

--- a/less/magic-bootstrap.less
+++ b/less/magic-bootstrap.less
@@ -87,7 +87,7 @@
 }
 #pre-menu li a:hover ul li a,
 #pre-menu li:hover ul li a {
-	padding: 2px 0 8px 0 !important;
+	padding: 2px 0 8px 5 !important;
 }
 #pre-menu li ul li:hover{
 	background-color: @grayLighter;
@@ -95,8 +95,8 @@
 #pre-menu li ul li{
 	border:0;
 }
-#pre-menu li ul li a{
-	padding:0 0 0 3px;
+#pre-menu ul.sub-menu li a{
+	color:@white;
 }
 .navbar .navbar-inner{
 	background-image:none;
