--- a/less/magic-bootstrap.less
+++ b/less/magic-bootstrap.less
@@ -9,13 +9,23 @@
 .label a{
 	color:@white;
 }
-
-h4  {
+h4, h3  {
 	font-family: 'Sintony', lucida sans console, sans-serif;
 }
-.post-metadata a, h4 a{
+.post-metadata a, h4 a, #footer a, #main-sidebar a, .type-post #post-content a{
 	color:@mainBrandColor;
 }
+h3 a{
+	color:@grayDark;
+}
+
+blockquote p {
+	font-size: 14px !important; 
+	padding-left: 1em; 
+	background: url(images/quote-point.png) no-repeat; 
+	padding: 0px 0 0 40px;
+}
+
 
 /*-------------menu end----------*/
 .sticky  {
@@ -119,6 +129,11 @@ h4.post-title a {
 }
 #main-menu li.current-menu-item a{
 	color:@mainBrandColor;
+}
+
+#footer{
+	border-top:5px solid @mainBrandColor;
+
 }
 
 // Colors
