refine header, move language selector to the title of page

--- a/less/magic-bootstrap.less
+++ b/less/magic-bootstrap.less
@@ -21,9 +21,8 @@ h3 a{
 
 blockquote p {
 	font-size: 14px !important; 
-	padding-left: 1em; 
 	background: url(images/quote-point.png) no-repeat; 
-	padding: 0px 0 0 40px;
+	padding: 5px;
 }
 
 
@@ -73,7 +72,7 @@ h4.post-title a {
 	display: none;
 	position: absolute;
 	z-index: 999;
-	width: 100px;
+	width: 150px;
 	font-weight: bold;
 	left: 0;
 	padding: 2px 0 5px;
