random logo in header, where+who+newsletter boxes in home

--- a/less/magic-bootstrap.less
+++ b/less/magic-bootstrap.less
@@ -42,7 +42,9 @@ h4.post-title a {
 	background-color:@grayLighter;
 }
 
-
+#home-boxes a:link {
+	color:@black;
+}
 
 /*------------new menu------------*/
 #pre-menu {
