main sidebar titles to h4, share butons in single to bottom, add categories to bottom of single, make edit buttom of post only for logged in, add language switch button to single

--- a/less/magic-bootstrap.less
+++ b/less/magic-bootstrap.less
@@ -6,8 +6,8 @@
 .globalreccolor {
   color:@mainBrandColor;
 }
-.label a{
-	color:@white;
+.label a, .post-metadata a.label {
+	color:@white !important;
 }
 h4, h3  {
 	font-family: 'Sintony', lucida sans console, sans-serif;
