move facebook buttons to menunav at the right, padding in the news posts

--- a/less/magic-bootstrap.less
+++ b/less/magic-bootstrap.less
@@ -3,6 +3,14 @@
 *  
 **/
 
+a {
+	color:@gray;
+}
+
+/*.container a {
+	color:@mainBrandColor;
+}*/
+
 .globalreccolor {
   color:@mainBrandColor;
 }
@@ -40,6 +48,7 @@ h4.post-title a {
 
 .category-in-the-news {
 	background-color:@grayLighter;
+	padding: 5px;
 }
 
 #home-boxes a:link {
