make footer widgetized, archive in4 boxes per row, sidebar in blog to the right

--- a/less/magic-bootstrap.less
+++ b/less/magic-bootstrap.less
@@ -47,8 +47,12 @@ h4.post-title a {
 }
 
 .category-in-the-news {
-	background-color:@grayLighter;
+	/*background-color:@grayLighter;*/
 	padding: 5px;
+}
+
+.category-in-the-news h4 a{
+	color:@grayLight;
 }
 
 #home-boxes a:link {
