--- a/less/magic-bootstrap.less
+++ b/less/magic-bootstrap.less
@@ -147,7 +147,7 @@ h4.post-title a {
 
 #footer{
 	border-top:5px solid @mainBrandColor;
-	margin-bottom:15px;
+	margin:10px 0 15px 0;
 }
 
 // Colors
