Adds an organge line to separate footer home bar. Adds images for continents.

--- a/style.css
+++ b/style.css
@@ -12,9 +12,12 @@ This is just a basic layout, with only the bare minimum defined.
 Please tweak this and make it your own. :)
 */
 
+
+#indicimelayer{
+	display:none;}
+
 #footer-home-bar img{
 	max-width:80px;
-	
 }
 #footer-home-bar a{
 	font-weight:bold;
