removes grey sticky posts

--- a/less/magic-bootstrap.less
+++ b/less/magic-bootstrap.less
@@ -35,12 +35,12 @@ blockquote p {
 
 
 /*-------------menu end----------*/
-.sticky  {
+/*.sticky  {
 	background-color:#eee;
 	border-top:3px solid @grayLight;
 }
 .sticky h4  {margin-top:1px !important;}
-
+*/
 .portada-home {}
 h4.post-title a {
 	color:@mainBrandColor;
@@ -146,7 +146,7 @@ h4.post-title a {
 }
 
 #footer{
-	border-top:5px solid @mainBrandColor;
+	border-top:15px solid @mainBrandColor;
 	margin:10px 0 15px 0;
 }
 
