Rescued image caption class. Now aligns to the left.

--- a/less/magic-bootstrap.less
+++ b/less/magic-bootstrap.less
@@ -7,9 +7,13 @@ a {
 	color:@gray;
 }
 
-/*.container a {
-	color:@mainBrandColor;
-}*/
+.wp-caption-text{
+font-size:10px;
+margin:4px 0 0 10px !important;
+margin: 0 10px 0 0px !important;
+padding:0 0 0 3px;
+background-color: #F3F3F3;
+}
 
 .globalreccolor {
   color:@mainBrandColor;
