Fonts in logotype,  twitter widget styling

--- a/less/magic-bootstrap.less
+++ b/less/magic-bootstrap.less
@@ -8,6 +8,18 @@
 #home-boxes-2 ul li, #blog ul li, #archive ul li{
 	list-style-type: none;
 }
+/* Widgets*/
+
+#main-sidebar .widget-container{
+	margin-bottom:30px;
+}
+.twitter-timestamp{
+	font-size: 85%;
+	color: grey;
+}
+.poweredby{
+	display:none;
+}
 
 /* Menu */
 .navbar {
@@ -38,7 +50,7 @@
 
 #language_list li a{
 	padding:4px;
-
+}
 #home .thumbnail {
 	margin: 0 0 10px 0;
 }
