--- a/style.css
+++ b/style.css
@@ -153,14 +153,6 @@ a {
 	color:#000;
 }
 
-.wp-caption-text{
-font-size:10px;
-margin:4px 0 0 10px !important;
-margin: 0 10px 0 0px !important;
-padding:0 0 0 3px;
-background-color: #F3F3F3;
-}
-
 .globalreccolor {
   color:#fe7c11;
 }
@@ -172,7 +164,7 @@ background-color: #F3F3F3;
 h4, h3, h2 {
 	font-family: 'Sintony', lucida sans console, sans-serif;
 }
-.post-metadata a, h4 a, #footer a, #main-sidebar a, .type-post #post-content a{
+.post-metadata a, h4 a, #footer a, #main-sidebar a, .type-post #post-content a, #post-content a{
 	color:#fe7c11;
 }
 
@@ -184,10 +176,17 @@ h4, h3, h2 {
 	color: white;
 }
 blockquote p {
-	font-size: 14px !important; 
+	font-size: 14px;
 	padding: 5px;
 }
 
+.wp-caption-text{
+font-size:10px;
+margin:4px 0 0 10px !important;
+margin: 0 10px 0 0px !important;
+padding:0 0 0 3px;
+background-color: #F3F3F3;
+}
 
 /*-------------menu end----------*/
 /*.sticky  {
