Fixes visualization of translation menu in single. It was hidden when mouseover the 2nd item.

--- a/style.css
+++ b/style.css
@@ -38,6 +38,10 @@ font-family:"Roboto Condensed",sans-serif;margin:35px 0 0 10px;
 	line-height: 1.2em;
 }
 
+.ontop{
+	z-index:1000;
+}
+
 .wp-caption {
 margin-bottom: 10px;
 }
