--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: Global Rec with bootstrap v3
-Theme URI: http://montera34.com/lab/
-Description:
+Theme URI: http://montera34.com/
+Description: WordPress theme for the GLobal Alliance of Waste Pickers
 Version: 0.1
-Author: Pablo Rey Montera34
+Author: Pablo Rey Mazón (Montera34)
 Tags: bootstrap
 */
 
