--- a/style.css
+++ b/style.css
@@ -335,4 +335,7 @@ nav li.menu-item-has-children {
 /* Progress bars */
 #waw-stats .progress {
 	margin-bottom: 10px;
+	background-color:white;
+	box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.1) inset;
+	border-radius: 0px
 }
