Reduces the padding between elements in the WAW navigation menu

--- a/style.css
+++ b/style.css
@@ -332,6 +332,10 @@ nav li.menu-item-has-children {
 	font-size:20px;
 }
 
+/* WAW */
+.nav > li > a {
+    padding: 10px 10px;
+}
 /* Progress bars */
 #waw-stats .progress {
 	margin-bottom: 10px;
