Adds icon and gives style to reference sction (written by, url, publication) in a single post

--- a/style.css
+++ b/style.css
@@ -356,3 +356,8 @@ nav li.menu-item-has-children {
 .waste-picker-org dl dd{
 	margin-bottom:5px;
 }
+
+/* Single aticle design */
+.news-reference {
+	margin: 0px 0px 1em;
+}
