Forces color to be red for 2012 year posts in country post list

--- a/style.css
+++ b/style.css
@@ -392,7 +392,7 @@ nav li.menu-item-has-children {
 
 /* Country post list. Styles year according to publication date */
 .year-2012 {
-	background-color:red;
+	background-color:red !important;
 }
 .year-2013 {
 	background-color:red;
