--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Author: Pablo Rey Mazón (Montera34)
 Tags: bootstrap
 */
 
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Sintony:400,700|Ubuntu');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed|Sintony');
 
 body{
 	background-color:#fafafa;
