Install fonts locally to avoid remote connection with Google Fonts

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Author: Pablo Rey Mazón (Montera34)
 Tags: bootstrap
 */
 
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed|Sintony');
+/*@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed|Sintony');*/
 
 body{
 	background-color:#fafafa;
