primer archivo test

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /*
-Theme Name: Global Rec with bootstrap v3
+Theme Name: Global Rec with bootstrap vdsda 
+
 Theme URI: https://montera34.com/
 Description: WordPress theme for the Global Alliance of Waste Pickers
 Version: 0.1
