Activates DataTables in some waw templates and fix some style bugs in these templates

--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ Tags: bootstrap
 
 /*@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed|Sintony');*/
 
+/* jokers */
+.spacetop {
+	margin-top: 20px;
+}
+
 body{
 	background-color:#fafafa;
 }
