--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ Tags: bootstrap
 
 /*@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed|Sintony');*/
 
+#post-content p, #post-content ol li, #post-content ul li {
+	font-size:1.2em;
+}
+
 /* jokers */
 .spacetop {
 	margin-top: 20px;
@@ -208,7 +212,7 @@ blockquote p {
 }
 
 .wp-caption-text{
-font-size:10px;
+font-size:0.9em !important;
 margin:4px 0 0 10px !important;
 margin: 0 10px 0 0px !important;
 padding:0 0 0 3px;
