--- a/style.css
+++ b/style.css
@@ -198,6 +198,10 @@ h4, h3, h2, h1 {
 .post-metadata a, h4 a, #footer a, #main-sidebar a, .type-post #post-content a, #post-content a, .content a{
 	color:#fe7c11;
 }
+.alert a.btn {
+	color: white;
+	font-weight: bold;
+}
 
 .label {
 	background-color: #999;
