--- a/style.css
+++ b/style.css
@@ -479,3 +479,8 @@ background-color:#d95f0e;
 .alignleft {
 	float:left;
 }
+
+/* style color link in button */
+a.btn-success  {
+    color: white !important;
+}
